--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: python
 python:
   - "3.5"
-  - "3.6"
 install:
   - pip install -U pip
   - pip install pybuilder
   - pyb install_dependencies
+  - pip install http://download.pytorch.org/whl/cu75/torch-0.1.12.post2-cp35-cp35m-linux_x86_64.whl
+  - pip install torchvision
 script:
   - pyb run_unit_tests -X
