Get model to train

--- a/src/main/configs/video2caption.yaml
+++ b/src/main/configs/video2caption.yaml
@@ -1,11 +1,24 @@
 paths:
-  videos_folder: &vidpath /Users/farzaneh/PycharmProjects/TwentyBN/pytorch-captioning/sample_data/frames
+  videos_folder: &vidpath /home/farzaneh/PycharmProjects/pytorch-captioning/sample_data/frames
 
-  annot_folder: /Users/farzaneh/PycharmProjects/TwentyBN/pytorch-captioning/sample_data/json
-  train_annot: &train_annot /Users/farzaneh/PycharmProjects/TwentyBN/pytorch-captioning/sample_data/json/training_sample.json
+  annot_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/sample_data/json
+  train_annot: &train_annot /home/farzaneh/PycharmProjects/pytorch-captioning/sample_data/json/training_sample.json
   validation_annot: *train_annot
   test_annot: *train_annot
 
+device:
+  use_cuda: &use_cuda False
+  synchronize_gpu: &sync True
+  gpus: [0]
+
 dataloaders:
-  batch_size: &b 16
+  batch_size: &b 2
   kwargs: {batch_size: *b, num_workers: 16, pin_memory: True}
+
+model:
+  type: RtorchnCaptioner
+  kwargs: {use_cuda: *use_cuda}
+
+training:
+  num_epochs: 200
+  learning_rate: &lr 0.01
