--- a/src/main/configs/video2caption.yaml
+++ b/src/main/configs/video2caption.yaml
@@ -22,6 +22,11 @@ model:
 training:
   num_epochs: 200
   learning_rate: &lr 0.01
-  valid_frequency: 1
-  verbose: True
+  teacher_force: True
+  verbose: False
+
+validation:
+  frequency: 1
+  teacher_force: False
+  verbose: False
 
