--- a/src/main/configs/video2caption.yaml
+++ b/src/main/configs/video2caption.yaml
@@ -23,10 +23,10 @@ training:
   num_epochs: 200
   learning_rate: &lr 0.01
   teacher_force: True
-  verbose: False
+  verbose: True
 
 validation:
   frequency: 1
   teacher_force: False
-  verbose: False
+  verbose: True
 
