--- a/src/main/configs/gestures_all.yaml
+++ b/src/main/configs/gestures_all.yaml
@@ -12,8 +12,8 @@ device:
   gpus: [0]
 
 dataloaders:
-  batch_size: &b 2
-  kwargs: {batch_size: *b, num_workers: 16, pin_memory: True}
+  batch_size: &b 12
+  kwargs: {batch_size: *b, num_workers: 16, pin_memory: False}
 
 model:
   type: RtorchnCaptioner
