--- a/src/main/configs/video2caption.yaml
+++ b/src/main/configs/video2caption.yaml
@@ -1,19 +1,19 @@
 paths:
-  videos_folder: &vidpath /home/farzaneh/PycharmProjects/pytorch-captioning/sample_data/frames
+  videos_folder: &vidpath /home/waseem/20bn-gitrepo/pytorch-captioning/sample_data/frames
 
-  annot_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/sample_data/json
-  train_annot: &train_annot /home/farzaneh/PycharmProjects/pytorch-captioning/sample_data/json/training_sample.json
+  annot_folder: /home/waseem/20bn-gitrepo/pytorch-captioning/sample_data/json
+  train_annot: &train_annot /home/waseem/20bn-gitrepo/pytorch-captioning/sample_data/json/training_sample.json
   validation_annot: *train_annot
   test_annot: *train_annot
 
 device:
-  use_cuda: &use_cuda True
+  use_cuda: &use_cuda False
   synchronize_gpu: &sync True
   gpus: [0]
 
 dataloaders:
-  batch_size: &b 2
-  kwargs: {batch_size: *b, num_workers: 16, pin_memory: True}
+  batch_size: &b 1
+  kwargs: {batch_size: *b, num_workers: 16, pin_memory: False}
 
 model:
   type: RtorchnCaptioner
