--- a/src/main/configs/sth_sth_np.yaml
+++ b/src/main/configs/sth_sth_np.yaml
@@ -1,10 +1,12 @@
 paths:
-  videos_folder: &vidpath /data/20bn-gestures/videos_npz
+  videos_folder: &vidpath /data/20bn-objects/videos_npz
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/checkpoint_sth/
 
-  annot_folder: /data/20bn-gestures/json
-  train_annot:  /data/20bn-gestures/json/train_20170626.json.gz
-  validation_annot: /data/20bn-gestures/json/validation_20170626.json.gz
-  test_annot: /data/20bn-gestures/json/test_20170626.json.gz
+  annot_folder: /data/20bn-objects/json
+  train_annot:  /data/20bn-objects/json/train_20170429.json.gz
+  validation_annot: /data/20bn-objects/json/validation_20170429.json.gz
+  test_annot: /data/20bn-gestures/json/test_20170429.json.gz
+  pretrained_model:
 
 device:
   use_cuda: &use_cuda True
@@ -12,7 +14,7 @@ device:
   gpus: [0]
 
 dataloaders:
-  batch_size: &b 32
+  batch_size: &b 16
   kwargs: {batch_size: *b, num_workers: 16, pin_memory: True}
 
 model:
@@ -23,7 +25,7 @@ training:
   num_epochs: 200
   learning_rate: &lr 0.01
   teacher_force: True
-  verbose: True
+  verbose: False
 
 validation:
   frequency: 1
