--- a/src/main/configs/video2caption.yaml
+++ b/src/main/configs/video2caption.yaml
@@ -1,13 +1,13 @@
 paths:
-  videos_folder: &vidpath /home/farzaneh/PycharmProjects/pytorch-captioning/sample_data/frames
+  videos_folder: &vidpath /home/farzaneh/PycharmProjects/pytorch-captioning/sample_data/videos_npz
   annot_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/sample_data/json
   checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/checkpoint_sample/
 
   train_annot: &train_annot /home/farzaneh/PycharmProjects/pytorch-captioning/sample_data/json/training_sample.json
   validation_annot: *train_annot
   test_annot: *train_annot
-  pretrained_model: /home/farzaneh/PycharmProjects/pytorch-captioning/checkpoint_sample/model.best
-
+  pretrained_model2: /home/farzaneh/PycharmProjects/pytorch-captioning/checkpoint_sample/model.best
+  pretrained_model:
 device:
   use_cuda: &use_cuda True
   synchronize_gpu: &sync True
