--- a/src/main/configs/gestures_np.yaml
+++ b/src/main/configs/gestures_np.yaml
@@ -7,7 +7,7 @@ paths:
   validation_annot: /data/20bn-gestures/json/validation_20170626.json.gz
   test_annot: /data/20bn-gestures/json/test_20170626.json.gz
 
-  pretrained_path:
+  pretrained_path: /home/farzaneh/PycharmProjects/pytorch-captioning/checkpoint_gestures_np/
 
 device:
   use_cuda: &use_cuda True
@@ -26,7 +26,7 @@ training:
   num_epochs: 200
   learning_rate: &lr 0.01
   teacher_force: True
-  verbose: True
+  verbose: False
 
 validation:
   frequency: 1
