Move changes around

--- a/src/main/configs/gestures_np.yaml
+++ b/src/main/configs/gestures_np.yaml
@@ -24,10 +24,10 @@ training:
   num_epochs: 200
   learning_rate: &lr 0.01
   teacher_force: True
-  verbose: True
+  verbose: False
 
 validation:
-  frequency: 1
+  frequency: 10
   teacher_force: False
   verbose: True
 
