--- a/src/main/configs/integration_test.yaml
+++ b/src/main/configs/integration_test.yaml
@@ -1,9 +1,8 @@
 paths:
-  videos_folder: &vidpath sample_data/videos
-  annot_folder: sample_data/json
+  videos_folder: &vidpath fake_data/videos
   checkpoint_folder: checkpoint_sample/
 
-  train_annot: &train_annot sample_data/json/training_sample.json
+  train_annot: &train_annot fake_data/json/fake.json
   validation_annot: *train_annot
   test_annot: *train_annot
 
@@ -14,14 +13,14 @@ device:
   gpus:
 
 dataloaders:
-  batch_size: &b 2
+  batch_size: &b 1
   kwargs: {batch_size: *b, num_workers: 16, pin_memory: False}
 
 model:
   type: RtorchnCaptioner
 
 training:
-  num_epochs: 200
+  num_epochs: 1
   learning_rate: &lr 0.01
   teacher_force: True
   verbose: True
