Incorporate Rtorchn pretrained network

--- a/src/main/configs/video2caption.yaml
+++ b/src/main/configs/video2caption.yaml
@@ -7,7 +7,7 @@ paths:
   validation_annot: *train_annot
   test_annot: *train_annot
 
-  pretrained_path:  /home/farzaneh/PycharmProjects/pytorch-captioning/checkpoint_sample/
+  pretrained_path:
 
 device:
   synchronize_gpu: &sync True
