--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.6"
 install:
   - pip install -U pip
-  - pip install pybuilder
+  - pip install --pre pybuilder
   - pip install http://download.pytorch.org/whl/cu75/torch-0.2.0.post1-cp35-cp35m-manylinux1_x86_64.whl
   - pip install torchvision
   - pyb install_dependencies -X
