--- a/src/main/configs/integration_test.yaml
+++ b/src/main/configs/integration_test.yaml
@@ -10,17 +10,17 @@ paths:
 
 device:
   synchronize_gpu: &sync True
-  gpus:
+  gpus: [1]
 
 dataloaders:
-  batch_size: &b 1
+  batch_size: &b 4
   kwargs: {batch_size: *b, num_workers: 16, pin_memory: False}
 
 model:
   type: RtorchnCaptioner
 
 training:
-  num_epochs: 1
+  num_epochs: 100
   learning_rate: &lr 0.01
   teacher_force: True
   verbose: True
