--- a/src/main/configs/integration_test.yaml
+++ b/src/main/configs/integration_test.yaml
@@ -10,25 +10,25 @@ paths:
 
 device:
   synchronize_gpu: &sync True
-  gpus:
+  gpus: [0]
 
 dataloaders:
-  batch_size: &b 2
+  batch_size: &b 10
   kwargs: {batch_size: *b, num_workers: 16, pin_memory: False}
 
 model:
   type: RtorchnCaptioner
 
 training:
-  num_epochs: 2
+  num_epochs: 10
   learning_rate: &lr 0.01
   teacher_force: True
-  verbose: True
+  verbose: False
 
 validation:
   frequency: 1
   teacher_force: False
-  verbose: True
+  verbose: False
 
 criteria:
   score: loss
