Update integration test config file to reflect changes

--- a/src/main/configs/integration_test.yaml
+++ b/src/main/configs/integration_test.yaml
@@ -55,7 +55,7 @@ targets:
   caption_type: template/label
 
 tokenizer:
-  kwargs: {}
+  kwargs: {user_maxlen: ~, cutoff: 0}
 
 logging:
   verbose: True
