--- a/src/main/configs/integration_test.yaml
+++ b/src/main/configs/integration_test.yaml
@@ -18,8 +18,14 @@ dataloaders:
   kwargs: {batch_size: 2, num_workers: 16, pin_memory: False}
 
 model:
-  type: CNN3dLSTM
-  kwargs: {}
+  type: EncoderDecoder
+  encoder: CNN3dLSTMEncoder
+  encoder_kwargs: {encoder_output_size: &enc_out_size 25}
+  decoder: LSTMDecoder
+  decoder_kwargs: {embedding_size: 25,
+                   hidden_size: *enc_out_size,
+                   num_lstm_layers: 1}
+
 
 loss:
   type: SequenceCrossEntropy
@@ -52,7 +58,7 @@ criteria:
   higher_is_better: False
 
 targets:
-  caption_type: template/label
+  caption_type: template
 
 tokenizer:
   kwargs: {}
