Include config file for loaded model integration test

--- a/src/main/configs/integration_test.yaml
+++ b/src/main/configs/integration_test.yaml
@@ -52,7 +52,7 @@ criteria:
   higher_is_better: False
 
 targets:
-  caption_type: template/label
+  caption_type: template
 
 tokenizer:
   kwargs: {}
