--- a/src/main/configs/sample_data_config.yaml
+++ b/src/main/configs/sample_data_config.yaml
@@ -6,18 +6,19 @@ paths:
   validation_annot: *train_annot
   test_annot: *train_annot
 
-  pretrained_path:
+pretrained:
+  pretrained_folder:
+  pretrained_file:
 
 device:
   synchronize_gpu: &sync True
   gpus: [0]
 
 dataloaders:
-  batch_size: &b 16
-  kwargs: {batch_size: *b, num_workers: 16, pin_memory: True}
+  kwargs: {batch_size: &b 16, num_workers: 16, pin_memory: True}
 
 model:
-  type: RtorchnCaptionerP
+  type: RtorchnCaptioner
   kwargs: {}
 
 loss:
@@ -25,9 +26,11 @@ loss:
 
 optimizer:
   type: Adam
+  kwargs: {lr: &lr 0.01 }
+
 training:
   num_epochs: 200
-  learning_rate: &lr 0.01
+  clip_grad:
   teacher_force: True
   verbose: False
 
@@ -42,4 +45,14 @@ criteria:
 
 targets:
   caption_type: template
-  user_maxlen: 10
+
+tokenizer:
+  kwargs: {user_maxlen: 10}
+
+scheduler:
+  type:
+  kwargs: {}
+
+logging:
+  verbose: True
+  tensorboard_frequency:
