Fix bug in checkpointer

--- a/src/main/configs/integration_test.yaml
+++ b/src/main/configs/integration_test.yaml
@@ -56,8 +56,8 @@ validation:
   verbose: True
 
 criteria:
-  score: accuracy
-  higher_is_better: True
+  score: loss
+  higher_is_better: False
 
 targets:
   caption_type: template
