--- a/src/main/configs/new_sth_sth_exp_pret.yaml
+++ b/src/main/configs/new_sth_sth_exp_pret.yaml
@@ -7,8 +7,8 @@ paths:
   test_annot: /data/20bn-somethingsomething/json/test_20170929.json.gz
 
 pretrained:
-  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ckp_new_sth_tmp_unfrozen/
-  pretrained_file: model.latest
+  pretrained_folder:
+  pretrained_file:
 
 device:
   synchronize_gpu: &sync True
@@ -41,10 +41,10 @@ optimizer:
 scheduler:
   type: ReduceLROnPlateau
   kwargs: {factor: 0.1,
-           min_lr: 1e-8,
+           min_lr: 1.0e-8,
            optimizer: *optimizer,
            patience: 3,
-           threshold: 1e-4}
+           threshold: 1.0e-4}
 
 training:
   num_epochs: 200
