--- a/src/main/configs/gestures_all.yaml
+++ b/src/main/configs/gestures_all.yaml
@@ -1,30 +1,61 @@
 paths:
   videos_folder: &vidpath /data/20bn-gestures/videos_npz
   annot_folder: /data/20bn-gestures/json
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/checkpoint_gestures_all/
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/checkpoint_gestures_np/
 
-  train_annot:  /data/20bn-gestures/json/train_20170626.json.gz
-  validation_annot: /data/20bn-gestures/json/validation_20170626.json.gz
-  test_annot: /data/20bn-gestures/json/test_20170626.json.gz
+paths:
+  videos_folder: &vidpath /data-ssd/videos_gulp/
 
-  pretrained_path:
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ckp_new_sth_exp_unfrozen_gulp_cutoff/
+
+  train_annot: &train_annot /data/20bn-somethingsomething/json/train_20170929.json.gz
+  validation_annot: /data/20bn-somethingsomething/json/validation_20170929.json.gz
+  test_annot: /data/20bn-somethingsomething/json/test_20170929.json.gz
+
+pretrained:
+  pretrained_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/ckp_new_sth_exp_frozen_gulp_cutoff/
+
+  pretrained_file: model.latest
 
 device:
   synchronize_gpu: &sync True
-  gpus: [0]
+  gpus: &gpus [0]
 
 dataloaders:
-  batch_size: &b 80
-  kwargs: {batch_size: *b, num_workers: 16, pin_memory: False}
+  kwargs: {batch_size: 32, num_workers: 16, pin_memory: False}
 
 model:
-  type:
+  type: EncoderDecoder
+  encoder: FCEncoder
+  encoder_args:
+  encoder_kwargs: {pretrained_path: /home/farzaneh/PycharmProjects/pretrained_nets/fully_conv_net_on_smtsmt_20170627/model.checkpoint,
+                   freeze: False}
+  decoder: LSTMDecoder
+  decoder_args:
+  decoder_kwargs: {embedding_size: 256,
+                   hidden_size: 256,
+                   num_lstm_layers: 1}
+
+loss:
+  type: SequenceCrossEntropy
+
+optimizer:
+  type: &optimizer Adam
+  kwargs: {lr: 0.001}
+
+scheduler:
+  type: ReduceLROnPlateau
+  kwargs: {factor: 0.1,
+           min_lr: 1.0e-8,
+           optimizer: *optimizer,
+           patience: 3,
+           threshold: 1.0e-4}
 
 training:
   num_epochs: 200
-  learning_rate: &lr 0.1
+  clip_grad:
   teacher_force: True
-  verbose: True
+  verbose: False
 
 validation:
   frequency: 1
@@ -32,6 +63,16 @@ validation:
   verbose: True
 
 criteria:
-  score: loss
-  higher_is_better: False
+  score: accuracy
+  higher_is_better: True
+
+targets:
+  caption_type: label
+
+tokenizer:
+  kwargs: {user_maxlen: 13, cutoff: 1}
+
+logging:
+  verbose: True
+  tensorboard_frequency: 1000
 
