--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -16,7 +16,7 @@ device:
   gpus: &gpus [0]
 
 dataloaders:
-  kwargs: {batch_size: 4, num_workers: 16, pin_memory: False}
+  kwargs: {batch_size: 16, num_workers: 16, pin_memory: False}
 
 model:
   type: EncoderDecoder
@@ -53,7 +53,7 @@ training:
 
 validation:
   frequency: 1
-  teacher_force: False
+  teacher_force: True
   verbose: True
 
 criteria:
@@ -64,7 +64,7 @@ targets:
   caption_type: template
 
 tokenizer:
-  kwargs: {user_maxlen: 13, cutoff: 10}
+  kwargs: {user_maxlen: 13, cutoff: 200}
 
 logging:
   verbose: True
