--- a/src/main/configs/jester1024.yaml
+++ b/src/main/configs/jester1024.yaml
@@ -1,14 +1,14 @@
 paths:
   videos_folder: &vidpath /data-ssd/videos_gulp/
 
-  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/jester1024_cutoff_cont2/
+  checkpoint_folder: /home/farzaneh/PycharmProjects/pytorch-captioning/results/jester1024_cutoff_300/
 
   train_annot: &train_annot /data/20bn-somethingsomething/json/train_20170929.json.gz
   validation_annot: /data/20bn-somethingsomething/json/validation_20170929.json.gz
   test_annot: /data/20bn-somethingsomething/json/test_20170929.json.gz
 
 pretrained:
-  pretrained_folder:  /home/farzaneh/PycharmProjects/pytorch-captioning/results/jester1024_cutoff_cont/
+  pretrained_folder:
   pretrained_file: model.latest
 
 device:
@@ -23,7 +23,7 @@ model:
   encoder: BIJesterEncoder
   encoder_args:
   encoder_kwargs: {pretrained_path: /home/farzaneh/PycharmProjects/pretrained_nets/jester_net_on_smtsmt_official_1024/model.checkpoint,
-                   freeze: False}
+                   freeze: True}
   decoder: LSTMDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 256,
@@ -64,7 +64,7 @@ targets:
   caption_type: template
 
 tokenizer:
-  kwargs: {user_maxlen: 13, cutoff: 200}
+  kwargs: {user_maxlen: 13, cutoff: 300}
 
 logging:
   verbose: True
