--- a/src/main/configs/integration_test.yaml
+++ b/src/main/configs/integration_test.yaml
@@ -21,7 +21,7 @@ model:
   encoder: CNN3dLSTMEncoder
   encoder_args:
   encoder_kwargs: {encoder_output_size: &enc_out_size 25}
-  decoder: LSTMDecoder
+  decoder: AttentionDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 25,
                    hidden_size: *enc_out_size,
