--- a/src/main/configs/load_model_test.yaml
+++ b/src/main/configs/load_model_test.yaml
@@ -21,9 +21,10 @@ model:
   encoder: CNN3dLSTMEncoder
   encoder_args:
   encoder_kwargs: {encoder_output_size: &enc_out_size 25}
-  decoder: LSTMDecoder
+  decoder: AttentionDecoder
   decoder_args:
   decoder_kwargs: {embedding_size: 25,
+                   encoder_hidden_size: *enc_out_size,
                    hidden_size: *enc_out_size,
                    num_lstm_layers: 1}
 
